--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -15,4 +15,4 @@ ObjectDescription = Opis obiektu
 HowMayPersonInRoom = Pok\u00F3j na ile os\u00F3b
 SingleBed = Ilos\u0107 \u0142\u00F3\u017Cek pojedy\u0144czych
 doubleBed = Ilo\u015B\u0107 \u0142\u00F3\u017Cek podw\u00F3jnych
-
+Short-Term-Apartment - Kr\u00F3tko terminowe wynajecie apartamentu
