--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -10,7 +10,7 @@ RoomAmount = Liczba pokoi:
 ApartemntAdding = Dodaj apartament
 ApartmentAdress = Podaj adres
 ObjectName = Nazwa obiektu
-UpladPicture = Za\u0142aduj zdj\u0119cie obiektu
+UpladPicture = Za\u0142aduj zdj\u0119cia obiektu
 ObjectDescription = Opis obiektu
 HowMayPersonInRoom = Pok\u00F3j na ile os\u00F3b
 SingleBed = Ilos\u0107 \u0142\u00F3\u017Cek pojedy\u0144czych
